--- a/views/post.html
+++ b/views/post.html
@@ -41,13 +41,16 @@
                 <textarea type="text" id=body></textarea>
 
                 <label>Sökväg till bild</label>
-                <input type="text" id="images">
+                <textarea type="text" id="images"></textarea>
 
                 <label>Liten</label>
                 <input type="radio" name="imagePosition" value="top">
 
                 <label>Stor</label>
                 <input type="radio" name="imagePosition" value="right">
+                <br>
+                <label>Ordningstal</label>
+                <input type="text" id="postOrder">
                 <br>
                 <button id="submitButton">
                   Skicka!
