Removed unused files and code.

--- a/views/index.html
+++ b/views/index.html
@@ -85,7 +85,7 @@
 			<div class="whitespace-vertical"></div>
 		</section>
 
-		<div class="card" id="footer">
+		<div class="card fadeIn stagger-7" id="footer">
 		</div>
 		<div class="card-content" id="footer-content">
 			<p>© 2021 Christoffer Billman. <br>Alla rättigheter reserverade.</p>
